--- a/get_metar_by_date.ipynb
+++ b/get_metar_by_date.ipynb
@@ -23,21 +23,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
+    "import multiprocessing\n",
     "from urllib.request import urlopen\n",
     "from bs4 import BeautifulSoup\n",
     "from tqdm.notebook import tqdm\n",
-    "\n",
-    "from metar import Metar"
+    "from metar import Metar\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +64,7 @@
     "def get_stations_with_coords():\n",
     "  soup = fetch('http://weather.rap.ucar.edu/surface/stations.txt')\n",
     "  text = soup.get_text()\n",
-    "  matches = re.findall(r\".*([A-Z]{4}).*([\\d]{2}\\s[\\d]{2}\\w).*([\\d]{2}\\s[\\d]{2}\\w)[\\s]*(\\d{1,4}).*\", text)\n",
+    "  matches = re.findall(r\".*([A-Z]{4}).*[\\s]([\\d]+\\s[\\d]+\\w).*[\\s]([\\d]+\\s[\\d]+\\w)[\\s]*(\\d{1,4}).*\", text)\n",
     "  stations = []\n",
     "  for match in matches:\n",
     "    stations.append({'ICAO': match[0], 'coords': \"+\".join(match[1:]).replace(' ', '-')})\n",
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ICAO': 'PAEL', 'coords': '58-12N+36-21W+3'}\n"
+      "{'ICAO': 'PAEL', 'coords': '58-12N+136-21W+3'}\n"
      ]
     }
    ],
@@ -123,51 +124,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'coords': '58-12N+36-21W+3',\n",
+       "[{'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 061445Z 00000KT 25SM SCT250 07/06 A3035 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 070049Z VRB04KT 20SM OVC140 16/05 A3044 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 111447Z 00000KT 25SM SKC 07/06 A3020 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 120048Z VRB05KT 20SM SKC 13/07 A3013 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 121445Z 00000KT 25SM SKC 06/04 A3012 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 130058Z 10008KT 20SM SCT150 15/M00 A3005 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 131445Z 00000KT 25SM SKC 06/04 A3004 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 141445Z 00000KT 25SM SKC 07/03 A3011 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 151445Z 00000KT 25SM FEW300 05/04 A3014 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 151846Z 00000KT 25SM SKC 11/06 A3014 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 152048Z 00000KT 25SM SKC 13/06 A3015 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 160049Z 00000KT 25SM FEW300 12/09 A3015 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 161445Z 00000KT 25SM SCT020 08/07 A3012 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 171445Z 00000KT 25SM FEW250 08/07 A3002 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 172056Z 00000KT 20SM BKN120 12/09 A3002 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 180046Z 00000KT 20SM OVC120 12/08 A2999 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 211445Z 00000KT 12SM OVC030 09/08 A2975 RMK NOSPECI'},\n",
-       " {'coords': '58-12N+36-21W+3',\n",
+       " {'coords': '58-12N+136-21W+3',\n",
        "  'observation': 'PAEL 261445Z 00000KT 15SM OVC035 09/09 A2958 RMK NOSPECI'}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,14 +179,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "58-12N+36-21W+3\n",
+      "58-12N+136-21W+3\n",
       "station: PAEL\n",
       "type: routine report, cycle 15 (automatic report)\n",
       "time: Tue Oct  6 14:45:00 2020\n",
@@ -209,44 +210,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_metars(station):\n",
+    "    localdata=[]\n",
+    "    for idx in range(0, 2):\n",
+    "        metar_obs = get_all_metar_obs(station, month-idx)\n",
+    "        for obs_item in metar_obs:\n",
+    "            localdata.append(f\"{obs_item['coords']},{obs_item['observation']}\")\n",
+    "    return localdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "month = 9\n",
+    "if __name__ == '__main__':\n",
+    "    trabajos=multiprocessing.cpu_count()\n",
+    "    with multiprocessing.Pool(trabajos-1) as p:\n",
+    "        data=p.map(get_metars,noaa_stations)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a882cdb012e4f81ac789265cbe2837a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=9580.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "2702836\n"
      ]
     }
    ],
    "source": [
-    "month = 9\n",
-    "path = f\"{month-1}-{month}_metar.csv\"\n",
-    "\n",
+    "data2=[]\n",
+    "for lista in data:\n",
+    "    if lista is not None:\n",
+    "        for i in lista:\n",
+    "            data2.append(i)\n",
+    "print(len(data2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = f'{month-1}-{month}_metar.csv'\n",
     "f = open(path,'w')\n",
-    "f.write(\"coordinates,observation\\n\")\n",
-    "\n",
-    "for station in tqdm(noaa_stations):\n",
-    "  for idx in range(0, 2):\n",
-    "    metar_obs = get_all_metar_obs(station, month-idx)\n",
-    "    for obs_item in metar_obs:\n",
-    "      f.write(f\"{obs_item['coords']},{obs_item['observation']}\\n\")\n",
-    "    \n",
+    "f.write('coordinates,observation\\n')\n",
+    "for line in data2:\n",
+    "    f.write(line)\n",
     "f.close()"
    ]
   },
