feat: get_real_time_obs.ipynb

--- a/get_metar_by_date.ipynb
+++ b/get_metar_by_date.ipynb
@@ -116,14 +116,15 @@
     "        return 0\n",
     "\n",
     "def get_all_metar_obs(station, month):\n",
-    "    soup = fetch(f\"https://www.ogimet.com/display_metars2.php?lugar={station['ICAO']}&tipo=SA&ord=DIR&nil=NO&fmt=txt&ano=2020&mes={month}&day=1&hora=00&anof=2020&mesf={month}&dayf=30&horaf=12&minf=59&enviar=Ver\")\n",
+    "    now = datetime.datetime.utcnow()\n",
+    "    soup = fetch(f\"https://www.ogimet.com/display_metars2.php?lugar={station['ICAO']}&tipo=SA&ord=DIR&nil=NO&fmt=txt&ano={now.year}&mes={month}&day=1&hora=00&anof={now.year}&mesf={now.month}&dayf={now.day}&horaf={now.hour}&minf=00&enviar=Ver\")\n",
     "    if soup is None:\n",
     "        return []\n",
     "    text = soup.get_text()\n",
     "    if f\"No hay METAR/SPECI de {station} en el periodo solicitado\" in text:\n",
     "        return []\n",
     "    data = []\n",
-    "    text = re.sub('\\s\\s+', '', text)\n",
+    "    text = re.sub('\\s\\s+', ' ', text)\n",
     "    matches = re.findall(r\"(\\d+)[\\s]METAR\\s(.*)=\", text)\n",
     "    for match in matches:\n",
     "        if ',' not in match:\n",
@@ -207,14 +208,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_metars(station):\n",
+    "def get_metars(station, month):\n",
     "    localdata = []\n",
-    "    for idx in range(0, 2):\n",
-    "        metar_obs = get_all_metar_obs(station, month-idx)\n",
-    "        for obs_item in metar_obs:\n",
-    "            hour = datetime.datetime.strptime(obs_item['datetime'], '%Y%m%d%H%M').hour\n",
-    "            if hour == 0 or hour == 6 or hour == 12 or hour == 18:\n",
-    "                localdata.append([obs_item['lat'], obs_item['lng'], obs_item['elev'], obs_item['datetime'], obs_item['observation']])\n",
+    "    metar_obs = get_all_metar_obs(station, month)\n",
+    "    for obs_item in metar_obs:\n",
+    "        hour = datetime.datetime.strptime(obs_item['datetime'], '%Y%m%d%H%M').hour\n",
+    "        if hour == 0 or hour == 6 or hour == 12 or hour == 18:\n",
+    "            localdata.append([obs_item['lat'], obs_item['lng'], obs_item['elev'], obs_item['datetime'], obs_item['observation']])\n",
+    "        \n",
     "    return localdata"
    ]
   },
@@ -228,7 +229,7 @@
     "\n",
     "jobs = multiprocessing.cpu_count()\n",
     "with multiprocessing.Pool(jobs - 1) as p:\n",
-    "    data = p.map(get_metars, noaa_stations)"
+    "    data = p.map(get_metars, noaa_stations, month)"
    ]
   },
   {
@@ -471,7 +472,6 @@
     "    else:\n",
     "        return (0, 0)\n",
     "\n",
-    "\n",
     "def month2number(month_name):\n",
     "    datetime_object = datetime.datetime.strptime(month_name, '%b')\n",
     "    return datetime_object.month\n",
@@ -498,11 +498,13 @@
     "    #using equation 4.24, Pg 96 Practical Meteorolgy (Roland Stull)\",\n",
     "    q = (622 * e0 * np.exp(c * (dew_point - T0)/(dew_point * T0)))/pressure # g/kg\",\n",
     "    return q/1000\n",
+    "\n",
     "def calculate_rela_humidity(dew_point,temperature):\n",
     "    c=243.04\n",
     "    b=17.625\n",
     "    rhum=100 * np.exp((c *b *(dew_point - temperature))/((c + dew_point)*(c + temperature)))\n",
     "    return rhum\n",
+    "\n",
     "def parse_pressure(obs):\n",
     "    # pressure: 1027.8 mb\n",
     "    # 3-hr pressure change 1.7hPa, increasing, then decreasing\n",
